--- a/gb/16/9/11/n8289114.md
+++ b/gb/16/9/11/n8289114.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xezdat3620/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xezdat3620/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/xezdat3620/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xezdat3620/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/xezdat3620/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xezdat3620/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/xezdat3620/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xezdat3620/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/xezdat3620/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xezdat3620/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/xezdat3620/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xezdat3620/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/xezdat3620/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xezdat3620/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/xezdat3620/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xezdat3620/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/xezdat3620/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xezdat3620/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/xezdat3620/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xezdat3620/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xezdat3620/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xezdat3620/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xezdat3620/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xezdat3620/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xezdat3620/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xezdat3620/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xezdat3620/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xezdat3620/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xezdat3620/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xezdat3620/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xezdat3620/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xezdat3620/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xezdat3620/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xezdat3620/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xezdat3620/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xezdat3620/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xezdat3620/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xezdat3620/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xezdat3620/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xezdat3620/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xezdat3620/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xezdat3620/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xezdat3620/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xezdat3620/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xezdat3620/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xezdat3620/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xezdat3620/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>白宫2017预算案 展现美未来十年发展愿景</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2006/07/607031840461164.jpg" />
 <h6>美国联邦政府打击中共国家主导的窃取知识产权行为，除了通过贸易谈判要求中共结构改革外，还有多项政策工具，其中一张王牌是美国的司法系统。美国国旗飞扬在白宫前  (Jamie Squire/Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2016年09月12日讯】（大纪元记者梁砚编译报导）美国<ahref="https://github.com/xezdat3620/djy/blob/master/gb/tag/%E7%99%BD%E5%AE%AB.md#1">白宫</a>公布的2017年预算计划凸显出<ahref="https://github.com/xezdat3620/djy/blob/master/gb/tag/%E5%A5%A5%E5%B7%B4%E9%A9%AC.md#1">奥巴马</a>政府对未来10年的发展愿景：继续提升就业与经济、增强美国创新能力、发展美国教育与职业培训，以及增强<ahref="https://github.com/xezdat3620/djy/blob/master/gb/tag/%E5%9B%BD%E5%AE%B6%E5%AE%89%E5%85%A8.md#1">国家安全</a>及国际领导力。预算案还归纳了<ahref="https://github.com/xezdat3620/djy/blob/master/gb/tag/%E5%A5%A5%E5%B7%B4%E9%A9%AC.md#1">奥巴马</a>政府在过去7年取得的政绩。</p>
+	<p>【大纪元2016年09月12日讯】（大纪元记者梁砚编译报导）美国<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%99%BD%E5%AE%AB.md#1">白宫</a>公布的2017年预算计划凸显出<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%A5%A5%E5%B7%B4%E9%A9%AC.md#1">奥巴马</a>政府对未来10年的发展愿景：继续提升就业与经济、增强美国创新能力、发展美国教育与职业培训，以及增强<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%9B%BD%E5%AE%B6%E5%AE%89%E5%85%A8.md#1">国家安全</a>及国际领导力。预算案还归纳了<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%A5%A5%E5%B7%B4%E9%A9%AC.md#1">奥巴马</a>政府在过去7年取得的政绩。</p>
 <p>预算案首先回顾了本届政府的成果，包括为美国创造1,400万个就业机会、将经济拉回正轨、8年来首次将失业率降至低于5%、为1,800万人提供可负担的健康保险，以及成功地为美国财政赤字减少近75%，使美国进入可持续发展的道路。</p>
-<p>为使美国经济发展继续为每位国民带来益处，为子孙后代创造发展机会，<ahref="https://github.com/xezdat3620/djy/blob/master/gb/tag/%E7%99%BD%E5%AE%AB.md#1">白宫</a>2017年预算案将在优先发展经济与<ahref="https://github.com/xezdat3620/djy/blob/master/gb/tag/%E5%9B%BD%E5%AE%B6%E5%AE%89%E5%85%A8.md#1">国家安全</a>的前提下，继续降低政府赤字，继续通过在健保、移民和税收方面的改革，减少政府在这方面的开支。预算案还包括提高美国在应对气候变化方面的创新能力、如何更有效应对致命性疾病、为国人创造公平的就业机会，以及未来10年，提升美国安全及国际领导力。</p>
+<p>为使美国经济发展继续为每位国民带来益处，为子孙后代创造发展机会，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%99%BD%E5%AE%AB.md#1">白宫</a>2017年预算案将在优先发展经济与<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%9B%BD%E5%AE%B6%E5%AE%89%E5%85%A8.md#1">国家安全</a>的前提下，继续降低政府赤字，继续通过在健保、移民和税收方面的改革，减少政府在这方面的开支。预算案还包括提高美国在应对气候变化方面的创新能力、如何更有效应对致命性疾病、为国人创造公平的就业机会，以及未来10年，提升美国安全及国际领导力。</p>
 <h2><strong>发展经济 降低赤字</strong></h2>
 <p>在去年国会两党达成的预算案的基础上，奥巴马政府对2017年的预算继续保持可自由支配水平，确保美国获得可持续的经济增长以及在创新和关键尖端科技中保持世界领先地位。</p>
 <p>预算案还提出几项新的改革措施，包括国际税收改革计划，使其采用现代化的企业税代码，使税收更公平高效，为创造就业提供帮助。</p>
@@ -32,7 +32,7 @@
 <p><strong>投资民用航空领域</strong></p>
 <p>预算案为发展太空探索、从太空监测地球气候变化和拓展空间新科技方面，提供资金，增强美国在这一领域的领导力，并将继续推进火星之旅计划。</p>
 <h2><strong>发展教育 适应21世纪经济模式 </strong></h2>
-<p>为帮助<ahref="https://github.com/xezdat3620/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E5%B0%B1%E4%B8%9A.md#1">美国就业</a>者适应21世纪的经济发展特点，预算案划拨资金，为帮助就业者更好地平衡工作与家庭的关系、保持健康、做好退休储蓄计划，以及能在短期失业时，获得更好的保障。</p>
+<p>为帮助<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E5%B0%B1%E4%B8%9A.md#1">美国就业</a>者适应21世纪的经济发展特点，预算案划拨资金，为帮助就业者更好地平衡工作与家庭的关系、保持健康、做好退休储蓄计划，以及能在短期失业时，获得更好的保障。</p>
 <p>预算案还为减少贫困人数，帮助他们恢复就业，提供帮助。</p>
 <p><strong>协助中产阶层就业 增加培训机会</strong></p>
 <p>预算案提出成立“美国技术培训资金”，为高需求的就业领域劳工，提供免费技术培训，使他们获得具有竞争力的技能。</p>
@@ -45,7 +45,7 @@
 <p><strong>击溃ISIL</strong></p>
 <p>保护美国人民的安全是本届政府的优先要务，因此美国在全球联盟打击恐怖组织伊斯兰国（ISIL）上，担当领导职能。预算案将向美国防部及国务院提供110亿美元的资金，支持打击ISIL的行动；为打击ISIL的地面军事力量提供培训和设备；帮助在叙利亚和伊拉克逃离ISIL迫害的人们获得稳定的生存状态；截断ISIL的经济来源及征兵途径；加强美国与盟友的合作，为受ISIL迫害的人群提供人道主义援助；协助为解决叙利亚内战，寻找政治解决途径等。</p>
 <p><strong>遏制暴力极端主义的膨胀</strong></p>
-<p>预算案在遏制国内暴力极端主义的膨胀方面，提供资金帮助，包括向社区<ahref="https://github.com/xezdat3620/djy/blob/master/gb/tag/%E5%8F%8D%E6%81%90.md#1">反恐</a>力量提供支持，协助他们为提前识别恐怖分子、遏制其发动暴力破坏活动，寻找更有效的途径，及早制止暴力事件的发生。</p>
+<p>预算案在遏制国内暴力极端主义的膨胀方面，提供资金帮助，包括向社区<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%8D%E6%81%90.md#1">反恐</a>力量提供支持，协助他们为提前识别恐怖分子、遏制其发动暴力破坏活动，寻找更有效的途径，及早制止暴力事件的发生。</p>
 <p><strong>支持欧洲盟友 反击俄罗斯的侵略扩张</strong></p>
 <p>为帮助美国在欧洲盟友反击俄罗斯的侵略扩张，预算案提供43亿美元，向美国在欧洲、欧亚大陆及中亚的盟友在政治、经济、外交及军事上提供支持，共同削弱俄罗斯为这些地区带来的军事威胁。</p>
 <p><strong>加强对亚太秩序再平衡政策</strong></p>
@@ -58,42 +58,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/xezdat3620/djy/blob/master/gb/11/2/14/n3169627.md#1">奥巴马下重手 10年要砍赤字1.1兆美元</a></li>
-<li><a href="https://github.com/xezdat3620/djy/blob/master/gb/13/4/24/n3854057.md#1">研究：白宫预算案下 多数美国人将多交税</a></li>
-<li><a href="https://github.com/xezdat3620/djy/blob/master/gb/13/10/1/n3976376.md#1">大限到 美国会未通过预算案</a></li>
-<li><a href="https://github.com/xezdat3620/djy/blob/master/gb/13/12/18/n4036746.md#1">美国预算案 通过参院程序关卡</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/2/14/n3169627.md#1">奥巴马下重手 10年要砍赤字1.1兆美元</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/4/24/n3854057.md#1">研究：白宫预算案下 多数美国人将多交税</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/10/1/n3976376.md#1">大限到 美国会未通过预算案</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/12/18/n4036746.md#1">美国预算案 通过参院程序关卡</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/14/n10143963.md#1" target="_blank">中共进入联合国与尼克松访华内幕（下）</a></li><li><a href="https://github.com/xezdat3620/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/11/10/16/n3402449.md#1" target="_blank">辛灏年演讲片段: 驱除马列文化 还我民族之魂</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/20/n11600972.md#1" target="_blank">【历史回眸】赵紫阳赞港英统治模式和蒋经国</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/23/n11405058.md#1" target="_blank">生死劫后 中共酷刑幸存者吁中国人了解真相</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/xezdat3620/djy/blob/master/gb/20/12/23/n12639978.md#1">放眼2021年 英预言家谈川普与世界大事</a></li>
-<li><a href="https://github.com/xezdat3620/djy/blob/master/gb/20/12/20/n12633276.md#1">木星土星大合相 《圣经》中圣诞之星现身？</a></li>
-<li><a href="https://github.com/xezdat3620/djy/blob/master/gb/20/12/22/n12638393.md#1">不丹王太后梦前世 故地重游感轮回</a></li>
-<li><a href="https://github.com/xezdat3620/djy/blob/master/gb/20/12/17/n12626693.md#1">冬至“开运”民俗有哪些？</a></li>
-<li><a href="https://github.com/xezdat3620/djy/blob/master/gb/20/12/22/n12637662.md#1">濒死男子到另一个世界 获知生命的意义</a></li>
-<li><a href="https://github.com/xezdat3620/djy/blob/master/gb/20/12/24/n12643382.md#1">【财商天下】北上广深停电 背后算盘或惊人</a></li>
-<li><a href="https://github.com/xezdat3620/djy/blob/master/gb/20/12/24/n12643607.md#1">【罗厨寻味】豉油鸡</a></li>
-<li><a href="https://github.com/xezdat3620/djy/blob/master/gb/20/12/25/n12645676.md#1">车评：阳光动力 2020 Hyundai Sonata Hybrid Ltd</a></li>
-<li><a href="https://github.com/xezdat3620/djy/blob/master/gb/20/12/24/n12643078.md#1">一颗超级陨石坠入青海 中国会出大事吗？</a></li>
-<li><a href="https://github.com/xezdat3620/djy/blob/master/gb/20/12/24/n12643382.md#1">【财商天下】北上广深停电 背后算盘或惊人</a></li>
-<li><a href="https://github.com/xezdat3620/djy/blob/master/gb/20/12/24/n12642158.md#1">台湾陆委会证实 向华强已提依亲居留申请</a></li>
-<li><a href="https://github.com/xezdat3620/djy/blob/master/gb/20/12/23/n12640869.md#1">六年情断 周迅与高圣远宣布离婚</a></li>
-<li><a href="https://github.com/xezdat3620/djy/blob/master/gb/20/12/24/n12642145.md#1">杜汶泽谈亲共艺人 林昶佐直播吸30万人</a></li>
-<li><a href="https://github.com/xezdat3620/djy/blob/master/gb/20/12/25/n12643860.md#1">62岁冯小刚近照很显憔悴 头发斑秃面色发白</a></li>
-<li><a href="https://github.com/xezdat3620/djy/blob/master/gb/20/12/24/n12641430.md#1">自曝不愿上综艺节目原因 高圆圆获网友称赞</a></li>
-<li><a href="https://github.com/xezdat3620/djy/blob/master/gb/20/12/23/n12641062.md#1">签王宗尧为旗下艺人 杜汶泽鼓励︰以后靠你</a></li>
-<li><a href="https://github.com/xezdat3620/djy/blob/master/gb/20/12/23/n12639978.md#1">放眼2021年 英预言家谈川普与世界大事</a></li>
-<li><a href="https://github.com/xezdat3620/djy/blob/master/gb/20/12/23/n12639185.md#1">小腹凸、腰酸可能是骨盆前倾 2动作“瘦”下来</a></li>
-<li><a href="https://github.com/xezdat3620/djy/blob/master/gb/20/12/23/n12639398.md#1">4岁女童讲述前世记忆 吓坏妈妈</a></li>
-<li><a href="https://github.com/xezdat3620/djy/blob/master/gb/20/12/25/n12644367.md#1">被陌生人喂食 山西流浪狗喜极而泣</a></li>
-<li><a href="https://github.com/xezdat3620/djy/blob/master/gb/20/12/23/n12639785.md#1">该用电动牙刷吗？手动跟电动牙刷大比拼！</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xezdat3620/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xezdat3620/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/9/11/n8289114.htm">白宫2017预算案 展现美未来十年发展愿景</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/9/11/n8289114.htm">白宫2017预算案 展现美未来十年发展愿景</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xezdat3620/djy/blob/master/gb/16/9/11/n8289114.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xezdat3620/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xezdat3620/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xezdat3620/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xezdat3620/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xezdat3620/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xezdat3620/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xezdat3620/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xezdat3620/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xezdat3620/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xezdat3620/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xezdat3620/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xezdat3620/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xezdat3620/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xezdat3620/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xezdat3620/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xezdat3620/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xezdat3620/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xezdat3620/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/xezdat3620/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xezdat3620/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xezdat3620/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xezdat3620/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xezdat3620/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xezdat3620/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/xezdat3620/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xezdat3620/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xezdat3620/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xezdat3620/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xezdat3620/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xezdat3620/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xezdat3620/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xezdat3620/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xezdat3620/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xezdat3620/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xezdat3620/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xezdat3620/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xezdat3620/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xezdat3620/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xezdat3620/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xezdat3620/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xezdat3620/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xezdat3620/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xezdat3620/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xezdat3620/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xezdat3620/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xezdat3620/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xezdat3620/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xezdat3620/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/16/9/11/n8289114.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
